src/test/deca/context/invalid/provided/test_type_convfloat.deca
// convfloat
{
    int x = 5;
    x = convfloat();
}